# scummvm-bot

./: .gitignore  Gemfile  README.md  config.ini.example  gitbot.gemspec  pyproject.toml
commitbot/: __main__.py  http_hooks.py  irc_bot.py  shortener.py
